--- a/5.KOPS/00.kops_cluster_tpl.j2
+++ b/5.KOPS/00.kops_cluster_tpl.j2
@@ -10,7 +10,8 @@ spec:
   kubernetesVersion: {{ KOPS_CLUSTER_VERSION }}
   containerRuntime: {{ KOPS_CLUSTER_CONTAINER_RUNTIME }}
   cloudProvider: {{ KOPS_CLUSTER_CLOUD }}
-  {# authorization:
+  configBase: {{ KOPS_STATE_S3 }}/{{ KOPS_CLUSTER_NAME }}
+  authorization:
     rbac: {}
   api:
     loadBalancer:
@@ -18,9 +19,6 @@ spec:
       class: {{ KOPS_CLUSTER_LB_CLASS }}
     publicName: {{ KOPS_CLUSTER_API_PUBLIC_NAME }}
   channel: stable
-  cloudProvider: {{ KOPS_CLUSTER_CLOUD }}
-  configBase: {{ KOPS_STATE_S3 }}/{{ KOPS_CLUSTER_NAME }}
-  containerRuntime: {{ KOPS_CLUSTER_CONTAINER_RUNTIME }}
   etcdClusters:
   - cpuRequest: 200m
     etcdMembers:
@@ -63,7 +61,7 @@ spec:
   networking:
     networkID: {{ KOPS_CLUSTER_NETWORK_ID }}
   subnets:
-    utility: "{{ KOPS_CLUSTER_UTILITY_SUBNETS }}"
+    utility:
     {%- for subnet in KOPS_CLUSTER_SUBNETS %}
     - cidr: {{ subnet.cidr }}
       id: {{ subnet.id }}
@@ -72,7 +70,7 @@ spec:
       zone: {{ subnet.zone }}
     {%- endfor %}
   subnets:
-    {%- for subnet in KOPS_CLUSTER_SUBNETS %}
+    {%- for subnet in KOPS_CLUSTER_UTILITY_SUBNETS %}
     - cidr: {{ subnet.cidr }}
       id: {{ subnet.id }}
       name: {{ subnet.name }}
@@ -85,7 +83,7 @@ spec:
     admissionControl:
       - AlwaysAdmit
 
-apiVersion: kops.k8s.io/v1alpha2
+{# apiVersion: kops.k8s.io/v1alpha2
 kind: InstanceGroup
 metadata:
   creationTimestamp: null
