--- a/5.KOPS/00.kops_cluster_tpl.j2
+++ b/5.KOPS/00.kops_cluster_tpl.j2
@@ -78,10 +78,10 @@ spec:
       zone: {{ subnet.zone }}
     {%- endfor %}
   adminAccess: {{ KOPS_CLUSTER_BASTION_CIDR }}
-  sshPublicKey: "{{ lookup('file', KOPS_CLUSTER_SSH_PUBLIC_KEY_FILE) }}"
+  {# sshPublicKey: "{{ lookup('file', KOPS_CLUSTER_SSH_PUBLIC_KEY_FILE) }}"
   kubeAPIServer:
     admissionControl:
-      - AlwaysAdmit
+      - AlwaysAdmit #}
 
 {# apiVersion: kops.k8s.io/v1alpha2
 kind: InstanceGroup
