--- a/5.KOPS/00.kops_cluster_tpl.j2
+++ b/5.KOPS/00.kops_cluster_tpl.j2
@@ -1,25 +1,21 @@
 apiVersion: kops.k8s.io/v1alpha2
 kind: Cluster
 metadata:
-  name: {{ KOPS_CLUSTER_NAME }}
   creationTimestamp: null
-  labels:
-  kops.k8s.io/cluster: {{ KOPS_CLUSTER_NAME }}
-
+  name: {{ KOPS_CLUSTER_NAME }}
 spec:
-  kubernetesVersion: {{ KOPS_CLUSTER_VERSION }}
-  containerRuntime: {{ KOPS_CLUSTER_CONTAINER_RUNTIME }}
-  cloudProvider: {{ KOPS_CLUSTER_CLOUD }}
-  configBase: {{ KOPS_STATE_S3 }}/{{ KOPS_CLUSTER_NAME }}
-  authorization:
-    rbac: {}
   api:
     loadBalancer:
-      type: {{ KOPS_CLUSTER_LB_TYPE }}
-      class: {{ KOPS_CLUSTER_LB_CLASS }}
-    publicName: {{ KOPS_CLUSTER_API_PUBLIC_NAME }}
+      class: {{ KOPS_CLUSTER_LB_TYPE }}
+      type: {{ KOPS_CLUSTER_LB_CLASS }}
+  authorization:
+    rbac: {}
   channel: stable
+  cloudProvider: {{ KOPS_CLUSTER_CLOUD }}
+  configBase: {{ KOPS_STATE_S3 }}/{{ KOPS_CLUSTER_NAME }}
+  containerRuntime: {{ KOPS_CLUSTER_CONTAINER_RUNTIME }}
   etcdClusters:
+
   - cpuRequest: 200m
     etcdMembers:
     - encryptedVolume: true
@@ -44,58 +40,69 @@ spec:
   kubelet:
     anonymousAuth: false
   kubernetesApiAccess:
-  - 10.10.10.0/24
+  - {{ KOPS_CLUSTER_BASTION_CIDR }}
   kubernetesVersion: v1.27.3
-  masterPublicName: devkops.calife.co.kr
-  networkCIDR: 10.10.0.0/16
-  networkID: vpc-0ed5033ff31934ac9
+  masterPublicName: {{ KOPS_CLUSTER_API_PUBLIC_NAME }}
+  networkCIDR: {{ KOPS_CLUSTER_NETWORK_CIDR }}
+  networkID: {{ KOPS_CLUSTER_NETWORK_ID }}
   networking:
     calico: {}
   nonMasqueradeCIDR: 100.64.0.0/10
   sshAccess:
-  - 10.10.10.0/24
+  - {{ KOPS_CLUSTER_BASTION_CIDR }}
+  subnets:
+  {%- for SUBNET in KOPS_CLUSTER_UTILITY_SUBNETS %}
+  - cidr: {{ SUBNET.cidr }}
+    id: {{ SUBNET.id }}
+    name: {{ SUBNET.name }}
+    type: {{ SUBNET.type }}
+    zone: {{ SUBNET.zone }}
+  {%- endfor %}
+  {%- for SUBNET in KOPS_CLUSTER_SUBNETS %}
+  - cidr: {{ SUBNET.cidr }}
+    id: {{ SUBNET.id }}
+    name: {{ SUBNET.name }}
+    type: {{ SUBNET.type }}
+    zone: {{ SUBNET.zone }}
+  {%- endfor %}
   topology:
     dns:
       type: Public
     masters: {{ KOPS_CLUSTER_MASTER_TOPOLOGY }}
-  networking:
-    networkID: {{ KOPS_CLUSTER_NETWORK_ID }}
-  subnets:
-    utility:
-    {%- for subnet in KOPS_CLUSTER_SUBNETS %}
-    - cidr: {{ subnet.cidr }}
-      id: {{ subnet.id }}
-      name: {{ subnet.name }}
-      type: {{ subnet.type }}
-      zone: {{ subnet.zone }}
-    {%- endfor %}
-  subnets:
-    {%- for subnet in KOPS_CLUSTER_UTILITY_SUBNETS %}
-    - cidr: {{ subnet.cidr }}
-      id: {{ subnet.id }}
-      name: {{ subnet.name }}
-      type: {{ subnet.type }}
-      zone: {{ subnet.zone }}
-    {%- endfor %}
-  adminAccess: {{ KOPS_CLUSTER_BASTION_CIDR }}
-  {# sshPublicKey: "{{ lookup('file', KOPS_CLUSTER_SSH_PUBLIC_KEY_FILE) }}"
-  kubeAPIServer:
-    admissionControl:
-      - AlwaysAdmit #}
+    nodes: {{ KOPS_CLUSTER_NODE_TOPOLOGY }}
 
-{# apiVersion: kops.k8s.io/v1alpha2
+{%- for IG in KOPS_CLUSTER_IGS %}
+
+---
+
+apiVersion: kops.k8s.io/v1alpha2
 kind: InstanceGroup
 metadata:
   creationTimestamp: null
   labels:
     kops.k8s.io/cluster: devkops.calife.co.kr
-  name: nodes-ap-northeast-2a
+  name: {{ IG.name }}
 spec:
-  image: 099720109477/ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-20230711
-  machineType: t3.medium
-  maxSize: 1
-  minSize: 1
-  role: Node
+  image: {{ IG.image }}
+  machineType: {{ IG.machineType }}
+  maxSize: {{ IG.maxSize }}
+  minSize: {{ IG.minSize }}
+  role: {{ IG.role }}
   subnets:
-  - ap-northeast-2a-1
-  - ap-northeast-2a-2 #}
+  {%- for subnet in IG.subnets %}
+  - {{ subnet }}
+  {%- endfor %}
+
+{%- endfor %}
+
+---
+
+apiVersion: kops.k8s.io/v1alpha2
+kind: SSHCredential
+metadata:
+  creationTimestamp: null
+  labels:
+    kops.k8s.io/cluster: {{ KOPS_CLUSTER_NAME }}
+    name: admin
+spec:
+  publicKey:"{{ lookup('file', KOPS_CLUSTER_SSH_PUBLIC_KEY_FILE) }}"
